packages/react/src/components/Modal/Modal.css
@import url('../../styles/tokens/bottom-sheet.css');
@import url('../../styles/tokens/modal.css');
@import url('../../styles/tokens/dialog.css');

.hearth-Modal {
  display: flex;
  flex-direction: column;
  gap: var(--h-modal-gap);
  background-color: var(--h-modal-background-color);
  overflow: auto;
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  border-top-left-radius: var(--h-modal-border-radius);
  border-top-right-radius: var(--h-modal-border-radius);
  height: fit-content;
  padding: var(--h-bottom-sheet-padding);
  min-width: fit-content;

  &:where([data-contains-image]) {
    align-items: center;
    padding: var(--h-modal-padding-mobile);
    height: 90vh;
    justify-content: space-between;
  }

  & :where(.hearth-ModalCloseIconButton) {
    position: absolute;
    top: var(--h-modal-padding);
    right: var(--h-modal-padding);
  }

  & :where(.hearth-ModalImage) {
    margin-top: calc(var(--h-space-300) + var(--h-modal-gap));
    max-height: 280px;
    max-width: 280px;
  }

  @media (--h-tablet) {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-bottom-left-radius: var(--h-modal-border-radius);
    border-bottom-right-radius: var(--h-modal-border-radius);
    width: var(--h-modal-width-tablet);
    height: fit-content;
    max-height: 80vh;
    padding: var(--h-dialog-padding);

    &:where([data-contains-image]) {
      padding: var(--h-modal-padding-tablet);
    }
  }

  @media (--h-desktop) {
    width: var(--h-modal-width-desktop);

    &:where([data-contains-image]) {
      padding: var(--h-modal-padding-desktop);
    }
  }

  & :where(.hearth-ModalHeader) {
    display: flex;
    flex-direction: column;
    gap: var(--h-modal-content-gap);
    align-items: start;
    text-wrap: pretty;
    text-align: center;

    @media (--h-tablet) {
      text-align: left;
    }

    /* add some margin so the heading doesn't collide with the close icon button when there is no image */
    &:not([data-contains-image] &) :where(.hearth-Heading) {
      margin-right: var(--h-space-300);
    }

    &:where([data-contains-image] &) {
      align-items: center;
    }
  }

  & :where(.hearth-ModalFooter) {
    display: flex;
    gap: var(--h-modal-action-gap);
    flex-direction: column-reverse;
    width: 100%;

    @media (--h-tablet) {
      flex-direction: row;
      justify-content: end;

      &:where([data-contains-image] &) {
        justify-content: center;
      }
    }
  }
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes hearth-modal-slide-up {
    from {
      opacity: 0;
      transform: translateY(50%);
    }

    to {
      opacity: 1;
      transform: translateY(0);
    }
  }

  @keyframes hearth-modal-slide-down {
    from {
      opacity: 1;
      transform: translateY(0);
    }

    to {
      opacity: 0;
      transform: translateY(50%);
    }
  }

  @keyframes hearth-modal-show {
    from {
      opacity: 0;
      transform: translate(-50%, -50%) scale(0.9);
    }

    to {
      opacity: 1;
      transform: translate(-50%, -50%) scale(1);
    }
  }

  @keyframes hearth-modal-hide {
    from {
      opacity: 1;
      transform: translate(-50%, -50%) scale(1);
    }

    to {
      opacity: 0;
      transform: translate(-50%, -50%) scale(0.99);
    }
  }

  .hearth-Modal {
    will-change: transform;

    &:where([data-state='open']) {
      animation: hearth-modal-slide-up 125ms ease-out;
    }

    &:where([data-state='closed']) {
      animation: hearth-modal-slide-down 125ms ease-in;
    }

    @media (--h-tablet) {
      &:where([data-state='open']) {
        animation: hearth-modal-show 125ms ease-out;
      }

      &:where([data-state='closed']) {
        animation: hearth-modal-hide 100ms ease-in;
      }
    }
  }
}

